--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -5,7 +5,7 @@
     background-color: white;
     border-bottom: 1px solid #F2F4F5;
     flex-direction: column;
-    gap:12px
+    gap:12px;
 }
 .title{
     font-size: 28px;
