--- a/src/components/NewsItem/styles.module.css
+++ b/src/components/NewsItem/styles.module.css
@@ -1,7 +1,7 @@
 .item{
     display: flex;
     width: 100%;
-    gap:12px
+    gap:12px;
 }
 .title{
     font-size: 14px;
@@ -13,7 +13,7 @@
 .info{
     display: flex;
     flex-direction: column;
-    gap:8px
+    gap:8px;
 }
 .wrapper{
     width: 64px;
